NetworkManager property “x-dynamic-challenge-echo:challenge-response” invalid or not supported
Summary
- After importing ovpn file, i tried to connect to the vpn but failed. System show notification of
Starting the service providing the VPN connection failed
and in the log i found this line
connect: failed to connect interactively: 'GDBus.Error:org.freedesktop.NetworkManager.VPN.Error.BadArguments: property “x-dynamic-challenge-echo:challenge-response” invalid or not supported'
Version affected
- distro: Arch (EndeavourOS) + KDE 6
- nmcli version: 1.46.0-2
Steps to reproduce
- Import ovpn file.
- In tab
VPN
fillusername
field. - In tab
IPv4
select Routes, selectUse only for resources on this connection
- Connect to vpn, fill password and otp code.
- First connect show timeout when connecting to vpn.
- Second connect show notification
Starting the service providing the VPN connection failed
.
Actual result
- The log show this
connect: failed to connect interactively: 'GDBus.Error:org.freedesktop.NetworkManager.VPN.Error.BadArguments: property “x-dynamic-challenge-echo:challenge-response” invalid or not supported'
Relevant logs
- Running
nmcli connection up
show notificationStarting the service providing the VPN connection failed
, when check the log i see this:
Thg 5 12 20:34:58 jamesd-arch-pc NetworkManager[5464]: <info> [1715520898.1910] vpn[0x5ffc144a7840,19c147a3-d16b-4bd9-add3-866771e400b6,"work_vpn"]: starting openvpn
Thg 5 12 20:34:58 jamesd-arch-pc NetworkManager[5464]: <warn> [1715520898.1981] vpn[0x5ffc144a7840,19c147a3-d16b-4bd9-add3-866771e400b6,"work_vpn"]: connect: failed to connect interactively: 'GDBus.Error:org.freedesktop.NetworkManager.VPN.Error.BadArguments: property “x-dynamic-challenge-echo:challenge-response” invalid or not supported'