libnm: accept secret with hint tags from old secret agents

Commit 345bd1b18731 ('libnmc: fix secrets request on 2nd stage of 2FA
authentication') and commit 27c701ebfbc9 ('libnmc: allow user input in
ECHO mode for 2FA challenges') introduced 2 new tags that hints for the
secret agents can have as prefix.

These tags can be used by agents to understand that it's the 2nd step of
a 2FA authentication. Then, they should return the secret name without
the tag.

Agents not using libnm or using and old version of libnm are still not
aware of this change, so they return the secret name without removing
the tag. The secret is saved to the profile as
"x-dynamic-challenge:challenge-response" instead of just
"challenge-response" and VPN plugins doesn't recognize it, failing the
profile's activation.

See:
- https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/issues/1536
- https://gitlab.gnome.org/GNOME/NetworkManager-openvpn/-/issues/142

Fix secrets received with hint tags in NMSetting::for_each_secret. It is
executed by the daemon in `validate_secret_flags` when secrets are
received from the secrets agents. This will ensure backwards
compatibility for those agents that hasn't adapted yet.